@@ -48,15 +48,15 @@ import org.apache.cxf.transport.websocket.WebSocketConstants;
 @Path("/web/bookstore")
 public class BookStoreWebSocket {
     private static ExecutorService executor = Executors.newSingleThreadExecutor();
-    private Map<String, OutputStream> eventsStreams = new HashMap<String, OutputStream>();
-    
+    private Map<String, OutputStream> eventsStreams = new HashMap<>();
+
     @GET
     @Path("/booknames")
     @Produces("text/plain")
     public byte[] getBookName() {
         return "CXF in Action".getBytes();
     }
-    
+
     @GET
     @Path("/booknames/servletstream")
     @Produces("text/plain")
@@ -66,22 +66,22 @@ public class BookStoreWebSocket {
         os.write("CXF in Action".getBytes());
         os.flush();
     }
-    
+
     @GET
     @Path("/books/{id}")
     @Produces("application/xml")
     public Book getBook(@PathParam("id") long id) {
         return new Book("CXF in Action", id);
     }
-    
+
     @POST
     @Path("/booksplain")
     @Consumes("text/plain")
     @Produces("text/plain")
     public Long echoBookId(long theBookId) {
-        return new Long(theBookId);
+        return Long.valueOf(theBookId);
     }
-    
+
     @GET
     @Path("/bookbought")
     @Produces("application/*")
@@ -96,7 +96,9 @@ public class BookStoreWebSocket {
                             for (int r = 2, i = 1; i <= 5; r *= 2, i++) {
                                 Thread.sleep(500);
                                 out.write(Integer.toString(r).getBytes());
+                                out.flush();
                             }
+                            out.close();
                         } catch (Exception e) {
                             e.printStackTrace();
                         }
@@ -105,7 +107,7 @@ public class BookStoreWebSocket {
             }
         };
     }
-    
+
     @GET
     @Path("/bookstream")
     @Produces("application/json")
@@ -119,6 +121,7 @@ public class BookStoreWebSocket {
                             for (int i = 2; i <= 5; i++) {
                                 Thread.sleep(500);
                                 out.write(new Book("WebSocket" + i, i));
+                                out.getEntityStream().flush();
                             }
                         } catch (Exception e) {
                             e.printStackTrace();
@@ -128,7 +131,7 @@ public class BookStoreWebSocket {
             }
         };
     }
-    
+
     @GET
     @Path("/hold/{t}")
     @Produces("text/plain")
@@ -141,7 +144,7 @@ public class BookStoreWebSocket {
         }
         return "Held from " + from + " for " + t + " ms";
     }
-    
+
     @GET
     @Path("/events/register")
     @Produces("text/plain")
@@ -164,6 +167,7 @@ public class BookStoreWebSocket {
             OutputStream out = it.next();
             try {
                 out.write(("News: event " + name + " created").getBytes());
+                out.flush();
             } catch (IOException e) {
                 it.remove();
                 e.printStackTrace();
@@ -176,7 +180,7 @@ public class BookStoreWebSocket {
     @Path("/events/unregister/{key}")
     @Produces("text/plain")
     public String unregisterEventsStream(@PathParam("key") String key) {
-        return (eventsStreams.remove(key) != null ? "Unregistered: " : "Already Unregistered: ") + key; 
+        return (eventsStreams.remove(key) != null ? "Unregistered: " : "Already Unregistered: ") + key;
     }
 }
 
