@@ -23,9 +23,14 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
+import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 import java.util.logging.Logger;
@@ -77,10 +82,15 @@ import org.apache.cxf.testutil.recorders.OutMessageRecorder;
 import org.apache.cxf.transport.http.HTTPConduit;
 import org.apache.cxf.transports.http.configuration.HTTPClientPolicy;
 import org.apache.cxf.ws.addressing.VersionTransformer.Names200408;
+import org.apache.cxf.ws.rm.DestinationSequence;
 import org.apache.cxf.ws.rm.RM10Constants;
 import org.apache.cxf.ws.rm.RMContextUtils;
 import org.apache.cxf.ws.rm.RMManager;
 import org.apache.cxf.ws.rm.RMProperties;
+import org.apache.cxf.ws.rm.SourceSequence;
+import org.apache.cxf.ws.rm.persistence.RMMessage;
+import org.apache.cxf.ws.rm.persistence.RMStore;
+import org.apache.cxf.ws.rm.v200702.Identifier;
 
 import org.junit.After;
 import org.junit.BeforeClass;
@@ -95,17 +105,17 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     public static final String PORT = Server.PORT;
 
     private static final Logger LOG = LogUtils.getLogger(SequenceTest.class);
-    private static final QName GREETMEONEWAY_NAME 
+    private static final QName GREETMEONEWAY_NAME
         = new QName("http://cxf.apache.org/greeter_control", "greetMeOneWay");
-    private static final String GREETMEONEWAY_ACTION 
+    private static final String GREETMEONEWAY_ACTION
         = "http://cxf.apache.org/greeter_control/Greeter/greetMeOneWayRequest";
-    private static final QName GREETME_NAME 
+    private static final QName GREETME_NAME
         = new QName("http://cxf.apache.org/greeter_control", "greetMe");
     private static final String GREETME_ACTION
         = "http://cxf.apache.org/greeter_control/Greeter/greetMeRequest";
     private static final String GREETME_RESPONSE_ACTION
         = "http://cxf.apache.org/greeter_control/Greeter/greetMeResponse";
-    private static final String RM10_GENERIC_FAULT_ACTION 
+    private static final String RM10_GENERIC_FAULT_ACTION
         = "http://schemas.xmlsoap.org/ws/2004/08/addressing/fault";
 
     private static String decoupledEndpoint;
@@ -123,8 +133,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     public static void startServers() throws Exception {
         assertTrue("server did not launch correctly", launchServer(Server.class));
     }
-    
-    
+
+
     @After
     public void tearDown() throws Exception {
         try {
@@ -134,7 +144,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             //ignore
         }
     }
-    
+
     // --- tests ---
     @Test
     public void testOnewayAnonymousAcks() throws Exception {
@@ -174,7 +184,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     @Test
     public void testOnewayAnonymousAcksDispatchProvider() throws Exception {
         init("org/apache/cxf/systest/ws/rm/rminterceptors_provider.xml",
-             false, 
+             false,
              true);
 
         dispatch.getRequestContext().put(MessageContext.WSDL_OPERATION,
@@ -191,7 +201,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // three application messages plus createSequence
 
         awaitMessages(4, 4);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
 
@@ -204,7 +214,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, true);
 
         // createSequenceResponse plus 3 partial responses
-        
+
         mf.verifyMessages(4, false);
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
@@ -214,7 +224,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, null, null, null}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true, true, true}, false);
     }
-    
+
     @Test
     public void testOnewayDeferredAnonymousAcks() throws Exception {
         init("org/apache/cxf/systest/ws/rm/deferred.xml");
@@ -233,7 +243,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(4, 2);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-                
+
         // three application messages plus createSequence
         mf.verifyMessages(4, true);
         String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, GREETMEONEWAY_ACTION,
@@ -245,14 +255,14 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // last one should include a sequence acknowledgment
 
         mf.verifyMessages(2, false);
-        expectedActions = 
-            new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+        expectedActions =
+            new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                           RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, null}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true}, false);
     }
-    
+
     @Test
     public void testOnewayDeferredNonAnonymousAcks() throws Exception {
         init("org/apache/cxf/systest/ws/rm/deferred.xml", true);
@@ -265,9 +275,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(3, 1);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(3, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  GREETMEONEWAY_ACTION};
         mf.verifyActions(expectedActions, true);
@@ -279,11 +289,11 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessages(1, false);
         mf.verifyMessageNumbers(new String[1], false);
         mf.verifyAcknowledgements(new boolean[1], false);
-        
+
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION};
         mf.verifyActionsIgnoringPartialResponses(expectedActions);
         mf.purge();
-        
+
         try {
             Thread.sleep(3 * 1000);
         } catch (InterruptedException ex) {
@@ -292,7 +302,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         // a standalone acknowledgement should have been sent from the server
         // side by now
-        
+
         awaitMessages(0, 1);
         mf.reset(outRecorder.getOutboundMessages(), inRecorder.getInboundMessages());
 
@@ -301,7 +311,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyAcknowledgements(new boolean[] {true}, false);
 
     }
-    
+
     @Test
     public void testOnewayAnonymousAcksSequenceLength1() throws Exception {
         init("org/apache/cxf/systest/ws/rm/seqlength1.xml");
@@ -313,15 +323,15 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // terminateSequence
 
         awaitMessages(6, 4);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(6, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION,
-                                                 RM10Constants.CREATE_SEQUENCE_ACTION, 
+                                                 RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION};
         mf.verifyActions(expectedActions, true);
@@ -333,9 +343,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(4, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION, 
-                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
+                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, null, null, null}, false);
@@ -360,16 +370,16 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // terminateSequence
 
         awaitMessages(6, 5);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(6, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION,
-                                                 RM10Constants.CREATE_SEQUENCE_ACTION, 
+                                                 RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION};
 
         mf.verifyActions(expectedActions, true);
@@ -381,17 +391,17 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(5, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION, 
-                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION, 
-                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
+                                        RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
+                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, null, null, null, null}, false);
         mf.verifyLastMessage(new boolean[] {false, false, false, false, false}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true, true, false, true}, false);
     }
-   
+
     @Test
     public void testOnewayAnonymousAcksSuppressed() throws Exception {
         testOnewayAnonymousAcksSuppressed(null);
@@ -405,23 +415,23 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     private void testOnewayAnonymousAcksSuppressed(Executor executor) throws Exception {
 
         init("org/apache/cxf/systest/ws/rm/suppressed.xml", false, executor);
- 
+
         greeter.greetMeOneWay("once");
         greeter.greetMeOneWay("twice");
         greeter.greetMeOneWay("thrice");
 
         // three application messages plus createSequence
-        
+
         awaitMessages(4, 1, 2000);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(4, true);
 
         String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
-                                                 GREETMEONEWAY_ACTION, 
+                                                 GREETMEONEWAY_ACTION,
                                                  GREETMEONEWAY_ACTION};
         mf.verifyActions(expectedActions, true);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, true);
@@ -430,10 +440,10 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // contain an acknowledgment
 
         mf.verifyMessages(1, false);
-        
+
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
-        
+
         mf.purge();
         assertEquals(0, outRecorder.getOutboundMessages().size());
         assertEquals(0, inRecorder.getInboundMessages().size());
@@ -441,14 +451,14 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // allow resends to kick in
         // first duplicate received will trigger acknowledgement
         awaitMessages(1, 1, 3000);
-        
+
         mf.reset(outRecorder.getOutboundMessages(), inRecorder.getInboundMessages());
         mf.verifyMessages(1, true);
         mf.verifyMessages(1, false);
         mf.verifyAcknowledgements(new boolean[] {true}, false);
-        
+
     }
-    
+
     @Test
     public void testTwowayNonAnonymous() throws Exception {
         init("org/apache/cxf/systest/ws/rm/rminterceptors.xml", true);
@@ -498,7 +508,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         verifyDOMResponse(dispatch.invoke(getDOMRequest("One")), "ONE");
         verifyDOMResponse(dispatch.invoke(getDOMRequest("Two")), "TWO");
         verifyDOMResponse(dispatch.invoke(getDOMRequest("Three")), "THREE");
-        
+
         // TODO: temporarily commented out for first version of new RM code
 //        verifyTwowayNonAnonymous();
     }
@@ -513,12 +523,12 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // inbound: CSR, greetResp+SA,   , TS
 
         awaitMessages(4, 3);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
 
         mf.verifyMessages(4, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION,
                                                  RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
@@ -530,7 +540,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(3, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION,
                                         RM10Constants.TERMINATE_SEQUENCE_ACTION};
 
@@ -538,24 +548,24 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, "1", null}, false);
         mf.verifyLastMessage(new boolean[] {false, true, false}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true, false}, false);
-        
+
     }
-    
+
     private void verifyTwowayNonAnonymous() throws Exception {
-    
+
         // CreateSequence and three greetMe messages
         // TODO there should be partial responses to the decoupled responses!
 
         awaitMessages(4, 4);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
-        
+
+
         mf.verifyMessages(4, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
-                                                 GREETME_ACTION, 
+                                                 GREETME_ACTION,
                                                  GREETME_ACTION};
         mf.verifyActions(expectedActions, true);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, true);
@@ -568,9 +578,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(4, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, false);
@@ -593,15 +603,15 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         // TODO there should be partial responses to the decoupled responses!
 
         awaitMessages(4, 4);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
-        
+
+
         mf.verifyMessages(4, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
-                                                 GREETME_ACTION, 
+                                                 GREETME_ACTION,
                                                  GREETME_ACTION};
         mf.verifyActions(expectedActions, true);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, true);
@@ -614,9 +624,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(4, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, false);
@@ -637,9 +647,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(3, 3);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(3, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
                                                  GREETME_ACTION};
         mf.verifyActions(expectedActions, true);
@@ -654,27 +664,27 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessages(3, false);
         mf.verifyLastMessage(new boolean[3], false);
         mf.verifyAcknowledgements(new boolean[3], false);
-        
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
+
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2"}, false);
         mf.purge();
-        
+
 
         // one standalone acknowledgement should have been sent from the client and one
         // should have been received from the server
-   
+
         awaitMessages(1, 0);
         mf.reset(outRecorder.getOutboundMessages(), inRecorder.getInboundMessages());
-        
+
         mf.verifyMessageNumbers(new String[1], true);
         mf.verifyLastMessage(new boolean[1], true);
         mf.verifyAcknowledgements(new boolean[] {true}, true);
 
     }
-    
+
     // A maximum sequence length of 2 is configured for the client only (server allows 10).
     // However, as we use the defaults regarding the including and acceptance
     // for inbound sequence offers and correlate offered sequences that are
@@ -684,12 +694,12 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     @Test
     public void testTwowayNonAnonymousMaximumSequenceLength2() throws Exception {
         init("org/apache/cxf/systest/ws/rm/seqlength10.xml", true);
-        
+
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        assertEquals("Unexpected maximum sequence length.", 10, 
+        assertEquals("Unexpected maximum sequence length.", 10,
             manager.getSourcePolicy().getSequenceTerminationPolicy().getMaxLength());
         manager.getSourcePolicy().getSequenceTerminationPolicy().setMaxLength(2);
-        
+
         greeter.greetMe("one");
         greeter.greetMe("two");
         greeter.greetMe("three");
@@ -697,11 +707,11 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(7, 6, 5000);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(7, true);
         String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
-                                                 GREETME_ACTION, 
+                                                 GREETME_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION,
                                                  RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
                                                  RM10Constants.CREATE_SEQUENCE_ACTION,
@@ -719,9 +729,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION,
-                                        GREETME_RESPONSE_ACTION, 
+                                        GREETME_RESPONSE_ACTION,
                                         RM10Constants.TERMINATE_SEQUENCE_ACTION,
-                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+                                        RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", null, null, "1"}, false);
@@ -732,8 +742,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         expected[5] = true;
         mf.verifyAcknowledgements(expected, false);
     }
-    
-    
+
+
     @Test
     public void testTwowayAtMostOnce() throws Exception {
         doTestTwowayNoDuplicates("org/apache/cxf/systest/ws/rm/atmostonce.xml");
@@ -747,23 +757,23 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     private void doTestTwowayNoDuplicates(String cfg) throws Exception {
 
         init(cfg);
-        
+
         class MessageNumberInterceptor extends AbstractPhaseInterceptor<Message> {
-            public MessageNumberInterceptor() {
+            MessageNumberInterceptor() {
                 super(Phase.PRE_STREAM);
             }
-            
+
             public void handleMessage(Message m) {
                 RMProperties rmps = RMContextUtils.retrieveRMProperties(m, true);
                 if (null != rmps && null != rmps.getSequence()) {
-                    rmps.getSequence().setMessageNumber(new Long(1));
+                    rmps.getSequence().setMessageNumber(Long.valueOf(1));
                 }
             }
         }
         greeterBus.getOutInterceptors().add(new MessageNumberInterceptor());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
-        
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
+
         greeter.greetMe("one");
         try {
             ((BindingProvider)greeter).getRequestContext().put("cxf.synchronous.timeout", 5000);
@@ -774,21 +784,21 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             IOException ie = (IOException)ex.getCause();
             assertTrue("Unexpected IOException message", ie.getMessage().startsWith("Timed out"));
         }
-        
-        // wait for resend to occur 
-        
+
+        // wait for resend to occur
+
         awaitMessages(4, 3, 5000);
-         
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
 
         // Expected outbound:
-        // CreateSequence 
+        // CreateSequence
         // + two requests
         // + acknowledgement
-       
+
         String[] expectedActions = new String[4];
-        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;        
+        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;
         expectedActions[1] = GREETME_ACTION;
         expectedActions[2] = GREETME_ACTION;
         expectedActions[3] = RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION;
@@ -796,30 +806,30 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, "1", "1", null}, true);
         mf.verifyLastMessage(new boolean[expectedActions.length], true);
         mf.verifyAcknowledgements(new boolean[] {false, false, false, true}, true);
- 
+
         // Expected inbound:
         // createSequenceResponse
         // + 1 response without acknowledgement
         // + 1 acknowledgement/last message
-        
+
         mf.verifyMessages(3, false);
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
-                                        GREETME_RESPONSE_ACTION, 
+                                        GREETME_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", null}, false);
         mf.verifyAcknowledgements(new boolean[] {false, false, true}, false);
     }
-    
+
     @Test
     public void testUnknownSequence() throws Exception {
         init("org/apache/cxf/systest/ws/rm/rminterceptors.xml");
-        
+
         class SequenceIdInterceptor extends AbstractPhaseInterceptor<Message> {
-            public SequenceIdInterceptor() {
+            SequenceIdInterceptor() {
                 super(Phase.PRE_STREAM);
             }
-            
+
             public void handleMessage(Message m) {
                 RMProperties rmps = RMContextUtils.retrieveRMProperties(m, true);
                 if (null != rmps && null != rmps.getSequence()) {
@@ -829,8 +839,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
         greeterBus.getOutInterceptors().add(new SequenceIdInterceptor());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
-       
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
+
         try {
             greeter.greetMe("one");
             fail("Expected fault.");
@@ -839,8 +849,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             assertEquals("Unexpected fault code.", Soap11.getInstance().getSender(), sf.getFaultCode());
             assertNull("Unexpected sub code.", sf.getSubCode());
             assertTrue("Unexpected reason.", sf.getReason().endsWith("is not a known Sequence identifier."));
-        }   
-        
+        }
+
         // the third inbound message has a SequenceFault header
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
@@ -850,19 +860,19 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                                         RM10_GENERIC_FAULT_ACTION};
         mf.verifyActions(expectedActions, false);
     }
-    
+
     @Test
     public void testInactivityTimeout() throws Exception {
         init("org/apache/cxf/systest/ws/rm/inactivity-timeout.xml");
-       
+
         greeter.greetMe("one");
-        
+
         try {
             Thread.sleep(500);
         } catch (InterruptedException ex) {
             // ignore
-        }        
-        
+        }
+
         try {
             greeter.greetMe("two");
             fail("Expected fault.");
@@ -871,20 +881,20 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             assertEquals("Unexpected fault code.", Soap11.getInstance().getSender(), sf.getFaultCode());
             assertNull("Unexpected sub code.", sf.getSubCode());
             assertTrue("Unexpected reason.", sf.getReason().endsWith("is not a known Sequence identifier."));
-        }   
-        
+        }
+
         awaitMessages(3, 3, 5000);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         // Expected outbound:
-        // CreateSequence 
-        // + two requests (second request does not include acknowledgement for first response as 
+        // CreateSequence
+        // + two requests (second request does not include acknowledgement for first response as
         // in the meantime the client has terminated the sequence
-       
+
         String[] expectedActions = new String[3];
-        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;        
+        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;
         for (int i = 1; i < expectedActions.length; i++) {
             expectedActions[i] = GREETME_ACTION;
         }
@@ -892,62 +902,62 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, "1", "2"}, true);
         mf.verifyLastMessage(new boolean[3], true);
         mf.verifyAcknowledgements(new boolean[] {false, false, false}, true);
- 
+
         // Expected inbound:
         // createSequenceResponse
         // + 1 response with acknowledgement
         // + 1 fault without acknowledgement
-        
+
         mf.verifyMessages(3, false);
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION,
                                         RM10_GENERIC_FAULT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", null}, false);
-        mf.verifyAcknowledgements(new boolean[] {false, true, false} , false);
-        
+        mf.verifyAcknowledgements(new boolean[] {false, true, false}, false);
+
         // the third inbound message has a SequenceFault header
         mf.verifySequenceFault(RM10Constants.UNKNOWN_SEQUENCE_FAULT_QNAME, false, 2);
     }
 
-    @Test    
+    @Test
     public void testOnewayMessageLoss() throws Exception {
         // waite a while for the last bus shutdown
         Thread.sleep(5000);
         testOnewayMessageLoss(null);
     }
-    
-    @Test    
+
+    @Test
     public void testOnewayMessageLossAsyncExecutor() throws Exception {
         testOnewayMessageLoss(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayMessageLoss(Executor executor) throws Exception {
 
         init("org/apache/cxf/systest/ws/rm/message-loss.xml", false, executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
-        
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
+
         greeter.greetMeOneWay("one");
         greeter.greetMeOneWay("two");
         greeter.greetMeOneWay("three");
         greeter.greetMeOneWay("four");
-        
+
         awaitMessages(7, 5, 10000);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
 
         // Expected outbound:
-        // CreateSequence 
+        // CreateSequence
         // + 4 greetMe messages
         // + at least 2 resends (message may be resent multiple times depending
         // on the timing of the ACKs)
-       
+
         String[] expectedActions = new String[7];
-        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;        
+        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;
         for (int i = 1; i < expectedActions.length; i++) {
             expectedActions[i] = GREETMEONEWAY_ACTION;
         }
@@ -955,12 +965,12 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3", "4", "2", "4"}, true, false);
         mf.verifyLastMessage(new boolean[7], true);
         mf.verifyAcknowledgements(new boolean[7], true);
- 
+
         // Expected inbound:
         // createSequenceResponse
         // + 2 partial responses to successfully transmitted messages
         // + 2 partial responses to resent messages
-        
+
         mf.verifyMessages(5, false);
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
@@ -970,7 +980,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, null, null, null, null}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true, true, true, true}, false);
-  
+
     }
 
     @Test
@@ -982,32 +992,32 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     public void testTwowayMessageLossAsyncExecutor() throws Exception {
         testTwowayMessageLoss(Executors.newSingleThreadExecutor());
     }
-    
+
     private void testTwowayMessageLoss(Executor executor) throws Exception {
 
         init("org/apache/cxf/systest/ws/rm/message-loss.xml", true, executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
 
         greeter.greetMe("one");
         greeter.greetMe("two");
         greeter.greetMe("three");
         greeter.greetMe("four");
-        
+
         awaitMessages(7, 5, 10000);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
 
         // Expected outbound:
-        // CreateSequence 
+        // CreateSequence
         // + 4 greetMe messages
         // + 2 resends
-       
+
         String[] expectedActions = new String[7];
-        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;        
+        expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;
         for (int i = 1; i < expectedActions.length; i++) {
             expectedActions[i] = GREETME_ACTION;
         }
@@ -1018,39 +1028,39 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         for (int i = 2; i < expectedAcks.length; i++) {
             expectedAcks[i] = true;
         }
-        mf.verifyAcknowledgements(expectedAcks , true);
- 
+        mf.verifyAcknowledgements(expectedAcks, true);
+
         // Expected inbound:
-        // createSequenceResponse 
-        // + 4 greetMeResponse actions (to original or resent) 
+        // createSequenceResponse
+        // + 4 greetMeResponse actions (to original or resent)
         // + 5 partial responses (to CSR & each of the initial greetMe messages)
         // + at least 2 further partial response (for each of the resends)
-        
+
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION, GREETME_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION, GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3", "4"}, false);
         mf.verifyAcknowledgements(new boolean[] {false, true, true, true, true}, false);
-  
+
     }
-    
+
     @Test
     public void testTwowayNonAnonymousNoOffer() throws Exception {
-        init("org/apache/cxf/systest/ws/rm/no-offer.xml", true);        
-        
+        init("org/apache/cxf/systest/ws/rm/no-offer.xml", true);
+
         greeter.greetMe("one");
         // greeter.greetMe("two");
 
         // Outbound expected:
         // CreateSequence + greetMe + CreateSequenceResponse = 3 messages
-  
+
         awaitMessages(3, 3);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(3, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETME_ACTION,
                                                  RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, true);
@@ -1059,7 +1069,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyAcknowledgements(new boolean[] {false, false, false}, true);
 
         expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
-                                        RM10Constants.CREATE_SEQUENCE_ACTION, 
+                                        RM10Constants.CREATE_SEQUENCE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, null, "1"}, false);
@@ -1081,7 +1091,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(max + 1, 1, 7500);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(max + 1, true);
         String[] expectedActions = new String[max + 1];
         expectedActions[0] = RM10Constants.CREATE_SEQUENCE_ACTION;
@@ -1090,23 +1100,23 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
         mf.verifyActions(expectedActions, true);
     }
-  
+
     @Test
     public void testMultiClientOneway() throws Exception {
-        
+
         SpringBusFactory bf = new SpringBusFactory();
-        String cfgResource = "org/apache/cxf/systest/ws/rm/rminterceptors.xml";            
+        String cfgResource = "org/apache/cxf/systest/ws/rm/rminterceptors.xml";
         initControl(bf, cfgResource);
-    
+
         class ClientThread extends Thread {
-            
+
             Greeter greeter;
             Bus greeterBus;
             InMessageRecorder inRecorder;
-            OutMessageRecorder outRecorder;  
+            OutMessageRecorder outRecorder;
             String id;
-            
-            ClientThread(SpringBusFactory bf, String cfgResource, int n) { 
+
+            ClientThread(SpringBusFactory bf, String cfgResource, int n) {
                 SequenceTest.this.initGreeter(bf, cfgResource, false, null);
                 greeter = SequenceTest.this.greeter;
                 greeterBus = SequenceTest.this.greeterBus;
@@ -1114,7 +1124,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 outRecorder = SequenceTest.this.outRecorder;
                 id = "client " + n;
             }
-            
+
             public void run() {
                 greeter.greetMeOneWay(id + ": once");
                 greeter.greetMeOneWay(id + ": twice");
@@ -1125,9 +1135,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 awaitMessages(4, 4);
             }
         }
-        
+
         ClientThread clients[] = new ClientThread[2];
-        
+
         try {
             for (int i = 0; i < clients.length; i++) {
                 clients[i] = new ClientThread(bf, cfgResource, i);
@@ -1153,7 +1163,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 // createSequenceResponse plus 3 partial responses
 
                 mf.verifyMessages(4, false);
-                expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+                expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                                 RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
                                                 RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION,
                                                 RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
@@ -1166,26 +1176,26 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             for (int i = 0; i < clients.length; i++) {
                 greeter = clients[i].greeter;
                 greeterBus = clients[i].greeterBus;
-                stopClient();                
+                stopClient();
             }
             greeter = null;
-        }        
+        }
     }
-    
+
     @Test
     public void testMultiClientTwoway() throws Exception {
         SpringBusFactory bf = new SpringBusFactory();
-        String cfgResource = "org/apache/cxf/systest/ws/rm/rminterceptors.xml";            
+        String cfgResource = "org/apache/cxf/systest/ws/rm/rminterceptors.xml";
         initControl(bf, cfgResource);
-    
+
         class ClientThread extends Thread {
-            
+
             Greeter greeter;
             Bus greeterBus;
             InMessageRecorder inRecorder;
-            OutMessageRecorder outRecorder;  
+            OutMessageRecorder outRecorder;
             String id;
-            
+
             ClientThread(SpringBusFactory bf, String cfgResource, int n) {
                 super("client " + n);
                 SequenceTest.this.initGreeter(bf, cfgResource, true, null);
@@ -1195,7 +1205,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 outRecorder = SequenceTest.this.outRecorder;
                 id = "client " + n;
             }
-            
+
             public void run() {
                 String s = greeter.greetMe(id + ": a").toLowerCase();
                 if (!s.contains(id)) {
@@ -1215,9 +1225,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 awaitMessages(5, 4);
             }
         }
-        
+
         ClientThread clients[] = new ClientThread[2];
-        
+
         try {
             for (int i = 0; i < clients.length; i++) {
                 clients[i] = new ClientThread(bf, cfgResource, i);
@@ -1233,11 +1243,11 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                 MessageFlow mf = new MessageFlow(clients[i].outRecorder.getOutboundMessages(),
                     clients[i].inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME,
                     RM10Constants.NAMESPACE_URI);
-                                
+
                 mf.verifyMessages(5, true);
-                String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+                String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                          GREETME_ACTION,
-                                                         GREETME_ACTION, 
+                                                         GREETME_ACTION,
                                                          GREETME_ACTION,
                                                          RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
                 mf.verifyActions(expectedActions, true);
@@ -1250,9 +1260,9 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
                 mf.verifyMessages(4, false);
 
-                expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                                GREETME_RESPONSE_ACTION, 
-                                                GREETME_RESPONSE_ACTION, 
+                expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                                GREETME_RESPONSE_ACTION,
+                                                GREETME_RESPONSE_ACTION,
                                                 GREETME_RESPONSE_ACTION};
                 mf.verifyActions(expectedActions, false);
                 mf.verifyMessageNumbers(new String[] {null, "1", "2", "3"}, false);
@@ -1264,16 +1274,16 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             for (int i = 0; i < clients.length; i++) {
                 greeter = clients[i].greeter;
                 greeterBus = clients[i].greeterBus;
-                stopClient();                
+                stopClient();
             }
             greeter = null;
-        }        
+        }
     }
-    
+
     @Test
     public void testServerSideMessageLoss() throws Exception {
         init("org/apache/cxf/systest/ws/rm/message-loss-server.xml", true);
-        
+
         // avoid client side message loss
         List<Interceptor<? extends Message>> outInterceptors = greeterBus.getOutInterceptors();
         for (Interceptor<? extends Message> i : outInterceptors) {
@@ -1284,22 +1294,22 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
         // avoid client side resends
         greeterBus.getExtension(RMManager.class).getConfiguration()
-            .setBaseRetransmissionInterval(new Long(60000));
+            .setBaseRetransmissionInterval(Long.valueOf(60000));
 
         greeter.greetMe("one");
         greeter.greetMe("two");
 
-        // outbound: CreateSequence and two greetMe messages 
+        // outbound: CreateSequence and two greetMe messages
 
         awaitMessages(3, 3);
-        
+
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
-        
+
+
         mf.verifyMessages(3, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
-                                                 GREETME_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
+                                                 GREETME_ACTION,
                                                  GREETME_ACTION};
         mf.verifyActions(expectedActions, true);
         mf.verifyMessageNumbers(new String[] {null, "1", "2"}, true);
@@ -1312,8 +1322,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         mf.verifyMessages(3, false);
 
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
-                                        GREETME_RESPONSE_ACTION, 
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
+                                        GREETME_RESPONSE_ACTION,
                                         GREETME_RESPONSE_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyMessageNumbers(new String[] {null, "1", "2"}, false);
@@ -1324,28 +1334,28 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     @Test
     public void testCreateSequenceAfterSequenceExpiration() throws Exception {
         init("org/apache/cxf/systest/ws/rm/expire-fast-seq.xml", true);
-        
+
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        
-        assertEquals("Unexpected expiration", DatatypeFactory.createDuration("PT5S"), 
+
+        assertEquals("Unexpected expiration", DatatypeFactory.createDuration("PT5S"),
                      manager.getSourcePolicy().getSequenceExpiration());
-        
+
         // phase one
         greeter.greetMeOneWay("one");
         greeter.greetMeOneWay("two");
-        
+
         // let the first sequence expire
         Thread.sleep(8000);
-        
+
         // expecting 3 outbounds and 2 inbounds
         awaitMessages(3, 2, 5000);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(), inRecorder.getInboundMessages(),
             Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         // CS, GA, GA
         mf.verifyMessages(3, true);
         verifyCreateSequenceAction(0, "PT5S", mf, true);
-        
+
         String[] expectedActions = new String[] {RM10Constants.INSTANCE.getCreateSequenceAction(),
                                                  GREETMEONEWAY_ACTION,
                                                  GREETMEONEWAY_ACTION};
@@ -1355,7 +1365,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         mf.verifyAcknowledgementRange(1, 2);
 
         // phase two
-        
+
         outRecorder.getOutboundMessages().clear();
         inRecorder.getInboundMessages().clear();
 
@@ -1363,14 +1373,14 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         // expecting 2 outbounds and 2 inbounds
         awaitMessages(2, 2, 5000);
-        
+
         mf = new MessageFlow(outRecorder.getOutboundMessages(), inRecorder.getInboundMessages(),
             Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         // CS, GA
         mf.verifyMessages(2, true);
         verifyCreateSequenceAction(0, "PT5S", mf, true);
-        
+
         expectedActions = new String[] {RM10Constants.INSTANCE.getCreateSequenceAction(),
                                         GREETMEONEWAY_ACTION};
         mf.verifyActions(expectedActions, true);
@@ -1378,19 +1388,24 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         // PR, CSR, PR, ACK
         mf.verifyMessages(2, false);
-        
+
         expectedActions = new String[] {RM10Constants.INSTANCE.getCreateSequenceResponseAction(),
                                         RM10Constants.INSTANCE.getSequenceAckAction()};
         mf.verifyActions(expectedActions, false);
-        
+
         mf.purge();
         assertEquals(0, outRecorder.getOutboundMessages().size());
         assertEquals(0, inRecorder.getInboundMessages().size());
     }
-    
+
     @Test
     public void testTerminateOnShutdown() throws Exception {
         init("org/apache/cxf/systest/ws/rm/terminate-on-shutdown.xml", true);
+
+        RMManager manager = greeterBus.getExtension(RMManager.class);
+        // this test also verify the DB is correctly being updated during the shutdown
+        RMMemoryStore store = new RMMemoryStore();
+        manager.setStore(store);
 
         greeter.greetMeOneWay("neutrophil");
         greeter.greetMeOneWay("basophil");
@@ -1400,29 +1415,33 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         awaitMessages(6, 2);
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
-        
+
         mf.verifyMessages(6, true);
-        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION, 
+        String[] expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_ACTION,
                                                  GREETMEONEWAY_ACTION,
-                                                 GREETMEONEWAY_ACTION, 
+                                                 GREETMEONEWAY_ACTION,
                                                  GREETMEONEWAY_ACTION,
                                                  RM10Constants.CLOSE_SEQUENCE_ACTION,
                                                  RM10Constants.TERMINATE_SEQUENCE_ACTION};
         mf.verifyActions(expectedActions, true);
         mf.verifyMessageNumbers(new String[] {null, "1", "2", "3", "4", null}, true);
-        
+
         // inbound: CreateSequenceResponse, out-of-band SequenceAcknowledgement
         // plus 6 partial responses
-        
+
         mf.verifyMessages(2, false);
         mf.verifyMessageNumbers(new String[2], false);
-        
-        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION, 
+
+        expectedActions = new String[] {RM10Constants.CREATE_SEQUENCE_RESPONSE_ACTION,
                                         RM10Constants.SEQUENCE_ACKNOWLEDGMENT_ACTION};
         mf.verifyActions(expectedActions, false);
         mf.verifyAcknowledgements(new boolean[] {false, true}, false);
-        
-    }    
+
+        // additional check to verify the operations performed on DB
+        assertEquals("sequences not released from DB", 0, store.ssmap.size());
+        assertEquals("messages not released from DB", 0, store.ommap.size());
+        assertEquals("sequence not closed in DB", 1, store.ssclosed.size());
+    }
 
     @Test
     public void testCreateSequenceRefused() throws Exception {
@@ -1432,7 +1451,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         assertEquals("Unexpected maximum sequence count.", 1, manager.getDestinationPolicy().getMaxSequences());
 
         greeter.greetMe("one");
-        
+
         //hold onto the greeter to keep the sequence open
         Closeable oldGreeter = (Closeable)greeter;
 
@@ -1445,7 +1464,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         } catch (WebServiceException ex) {
             // sequence creation refused
         }
-        
+
         // the third inbound message has a SequenceFault header
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
@@ -1455,7 +1474,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                                         GREETME_RESPONSE_ACTION,
                                         RM10_GENERIC_FAULT_ACTION};
         mf.verifyActions(expectedActions, false);
-        
+
         //now close the old greeter to cleanup the sequence
         oldGreeter.close();
     }
@@ -1477,12 +1496,12 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     private void init(String cfgResource, boolean useDecoupledEndpoint, boolean useDispatchClient) {
         init(cfgResource, useDecoupledEndpoint, useDispatchClient, null);
     }
-    
-    private void init(String cfgResource, 
-                      boolean useDecoupledEndpoint, 
-                      boolean useDispatchClient, 
+
+    private void init(String cfgResource,
+                      boolean useDecoupledEndpoint,
+                      boolean useDispatchClient,
                       Executor executor) {
-        
+
         SpringBusFactory bf = new SpringBusFactory();
         initControl(bf, cfgResource);
         initGreeterBus(bf, cfgResource);
@@ -1492,7 +1511,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             initProxy(useDecoupledEndpoint, executor);
         }
     }
-    
+
     private void initControl(SpringBusFactory bf, String cfgResource) {
         controlBus = bf.createBus();
         BusFactory.setDefaultBus(controlBus);
@@ -1504,8 +1523,8 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         } catch (Exception ex) {
             //ignore
         }
-        
-        assertTrue("Failed to start greeter", control.startGreeter(cfgResource));        
+
+        assertTrue("Failed to start greeter", control.startGreeter(cfgResource));
     }
 
     private void initGreeter(SpringBusFactory bf,
@@ -1515,7 +1534,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         initGreeterBus(bf, cfgResource);
         initProxy(useDecoupledEndpoint, executor);
     }
-    
+
     private void initGreeterBus(SpringBusFactory bf,
                                 String cfgResource) {
         greeterBus = bf.createBus(cfgResource);
@@ -1531,7 +1550,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     private void initDispatch(boolean useDecoupledEndpoint) {
         GreeterService gs = new GreeterService();
         dispatch = gs.createDispatch(GreeterService.GreeterPort,
-                                     DOMSource.class, 
+                                     DOMSource.class,
                                      Service.Mode.MESSAGE);
         try {
             updateAddressPort(dispatch, PORT);
@@ -1545,13 +1564,13 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
     }
 
-    private void initProxy(boolean useDecoupledEndpoint, Executor executor) {        
+    private void initProxy(boolean useDecoupledEndpoint, Executor executor) {
         GreeterService gs = new GreeterService();
 
         if (null != executor) {
             gs.setExecutor(executor);
         }
-   
+
         greeter = gs.getGreeterPort();
         try {
             updateAddressPort(greeter, PORT);
@@ -1570,7 +1589,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
     private void initDecoupledEndpoint(Client c) {
         // programatically configure decoupled endpoint that is guaranteed to
         // be unique across all test cases
-        decoupledEndpoint = "http://localhost:" 
+        decoupledEndpoint = "http://localhost:"
             + allocatePort("decoupled-" + decoupledCount++) + "/decoupled_endpoint";
 
         HTTPConduit hc = (HTTPConduit)(c.getConduit());
@@ -1579,7 +1598,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         LOG.fine("Using decoupled endpoint: " + cp.getDecoupledEndpoint());
     }
-    
+
     private void stopClient() throws IOException {
         if (null != greeterBus) {
             //ensure we close the decoupled destination of the conduit,
@@ -1604,20 +1623,20 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             controlBus.shutdown(true);
         }
     }
-    
+
     private void stopGreeterButNotCloseConduit() {
         if (null != greeterBus) {
-          
+
             greeterBus.shutdown(true);
             greeter = null;
             greeterBus = null;
         }
     }
-    
+
     private void awaitMessages(int nExpectedOut, int nExpectedIn) {
         awaitMessages(nExpectedOut, nExpectedIn, 10000);
     }
-    
+
     private void awaitMessages(int nExpectedOut, int nExpectedIn, int timeout) {
         MessageRecorder mr = new MessageRecorder(outRecorder, inRecorder);
         mr.awaitMessages(nExpectedOut, nExpectedIn, timeout);
@@ -1629,7 +1648,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
     private DOMSource getDOMRequest(String n, boolean oneway)
         throws Exception {
-        InputStream is = 
+        InputStream is =
             getClass().getResourceAsStream((oneway ? "oneway" : "twoway")
                                            + "Req" + n + ".xml");
         DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
@@ -1641,16 +1660,17 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
     private static String convertToString(DOMSource domSource)
         throws TransformerException {
-        Transformer xformer =
-            TransformerFactory.newInstance().newTransformer();
+        TransformerFactory transformerFactory = TransformerFactory.newInstance();
+        transformerFactory.setFeature(javax.xml.XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        Transformer transformer = transformerFactory.newTransformer();
         StringWriter output = new StringWriter();
-        xformer.transform(domSource, new StreamResult(output));
+        transformer.transform(domSource, new StreamResult(output));
         return output.toString();
     }
 
     private static String parseResponse(DOMSource domResponse) {
         Element el = ((Document)domResponse.getNode()).getDocumentElement();
-        Map<String, String> ns = new HashMap<String, String>();
+        Map<String, String> ns = new HashMap<>();
         ns.put("soap", "http://schemas.xmlsoap.org/soap/envelope/");
         ns.put("ns", "http://cxf.apache.org/greeter_control/types");
         XPathUtils xp = new XPathUtils(ns);
@@ -1660,7 +1680,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                                    XPathConstants.STRING);
     }
 
-    private void verifyDOMResponse(DOMSource domResponse, String expected) 
+    private void verifyDOMResponse(DOMSource domResponse, String expected)
         throws TransformerException {
         String s = convertToString(domResponse);
         assertTrue("expected: " + s + " to contain: " + expected,
@@ -1669,7 +1689,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                      expected,
                      parseResponse(domResponse));
     }
-    
+
     public void verifyCreateSequenceAction(int index, String expiration, MessageFlow mf, boolean outbound)
         throws Exception {
         Document d = mf.getMessage(index, outbound);
@@ -1678,13 +1698,13 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         assertEquals("Unexpected expires-value", expiration, expires);
     }
-    
+
     private String getCreateSequenceExpires(Document document) throws Exception {
         Element envelopeElement = document.getDocumentElement();
-        QName qname = RM10Constants.INSTANCE.getCreateSequenceOperationName(); 
-        NodeList nodes = 
+        QName qname = RM10Constants.INSTANCE.getCreateSequenceOperationName();
+        NodeList nodes =
             envelopeElement.getElementsByTagNameNS(qname.getNamespaceURI(), qname.getLocalPart());
-        
+
         if (nodes.getLength() == 1) {
             Element element = MessageFlow.getNamedElement((Element)nodes.item(0), "Expires");
             if (element != null) {
@@ -1692,5 +1712,111 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             }
         }
         return null;
+    }
+
+    private static class RMMemoryStore implements RMStore {
+        // during this particular test, the operations are expected to be invoked sequentially so use just HashMap
+        Map<Identifier, SourceSequence> ssmap = new HashMap<>();
+        Map<Identifier, DestinationSequence> dsmap = new HashMap<>();
+        Map<Identifier, Collection<RMMessage>> ommap = new HashMap<>();
+        Map<Identifier, Collection<RMMessage>> immap = new HashMap<>();
+        Set<Identifier> ssclosed = new HashSet<>();
+
+        @Override
+        public void createSourceSequence(SourceSequence seq) {
+            ssmap.put(seq.getIdentifier(), seq);
+        }
+
+        @Override
+        public void createDestinationSequence(DestinationSequence seq) {
+            dsmap.put(seq.getIdentifier(), seq);
+        }
+
+        @Override
+        public SourceSequence getSourceSequence(Identifier seq) {
+            return ssmap.get(seq);
+        }
+
+        @Override
+        public DestinationSequence getDestinationSequence(Identifier seq) {
+            return dsmap.get(seq);
+        }
+
+        @Override
+        public void removeSourceSequence(Identifier seq) {
+            ssmap.remove(seq);
+        }
+
+        @Override
+        public void removeDestinationSequence(Identifier seq) {
+            dsmap.remove(seq);
+        }
+
+        @Override
+        public Collection<SourceSequence> getSourceSequences(String endpointIdentifier) {
+            return ssmap.values();
+        }
+
+        @Override
+        public Collection<DestinationSequence> getDestinationSequences(String endpointIdentifier) {
+            return dsmap.values();
+        }
+
+        @Override
+        public Collection<RMMessage> getMessages(Identifier sid, boolean outbound) {
+            return outbound ? ommap.get(sid) : immap.get(sid);
+        }
+
+        @Override
+        public void persistOutgoing(SourceSequence seq, RMMessage msg) {
+            Collection<RMMessage> cm = getMessages(seq.getIdentifier(), ommap);
+            if (msg != null) {
+                //  update the sequence status and add the message
+                cm.add(msg);
+            } else {
+                // update only the sequence status
+                if (seq.isLastMessage()) {
+                    ssclosed.add(seq.getIdentifier());
+                }
+            }
+        }
+
+        @Override
+        public void persistIncoming(DestinationSequence seq, RMMessage msg) {
+            Collection<RMMessage> cm = getMessages(seq.getIdentifier(), immap);
+            if (msg != null) {
+                //  update the sequence status and add the message
+                cm.add(msg);
+            } else {
+                // update only the sequence status
+            }
+        }
+
+        @Override
+        public void removeMessages(Identifier sid, Collection<Long> messageNrs, boolean outbound) {
+            removeMessages(sid, messageNrs, outbound ? ommap : immap);
+        }
+
+        private Collection<RMMessage> getMessages(Identifier seq, Map<Identifier, Collection<RMMessage>> map) {
+            Collection<RMMessage> cm = map.get(seq);
+            if (cm == null) {
+                cm = new LinkedList<RMMessage>();
+                map.put(seq, cm);
+            }
+            return cm;
+        }
+
+        private void removeMessages(Identifier sid, Collection<Long> messageNrs,
+                                    Map<Identifier, Collection<RMMessage>> map) {
+            for (Iterator<RMMessage> it = map.get(sid).iterator(); it.hasNext();) {
+                RMMessage m = it.next();
+                if (messageNrs.contains(m.getMessageNumber())) {
+                    it.remove();
+                }
+            }
+            if (map.get(sid).isEmpty()) {
+                map.remove(sid);
+            }
+        }
     }
 }
